--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -35,7 +35,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Magasin</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'store:index' %}">Magasin</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Arrivage</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
@@ -47,28 +47,30 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Commandes
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
-                    {% if user.is_authenticated %}
-                    <a class="d-flex" href="{% url 'store:logout' %}">
-                        <button class="btn btn-outline-dark" type="submit">
-                            Hi {{ user.username }}!
-                            <i class="bi bi-box-arrow-right me-1"></i>
-                        </button>
-                    </a>
-                    {% else %}
-                    <a class="d-flex" href="{% url 'store:login' %}">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi bi-box-arrow-in-right me-1"></i>
-                            Login    
-                        </button>
-                    </a>
-                    {% endif %}
+                    <div class="d-flex">
+                        <form>
+                            {% csrf_token %}
+                            <button class="btn btn-outline-dark" type="submit">
+                                <i class="bi-cart-fill me-1"></i>
+                                Commandes
+                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            </button>
+                        </form>
+                        {% if user.is_authenticated %}
+                        <a  href="{% url 'store:logout' %}">
+                            <button class="btn btn-outline-dark" type="submit">
+                                Hi {{ user.username }}!
+                                <i class="bi bi-box-arrow-right me-1"></i>
+                            </button>
+                        </a>
+                        {% else %}
+                        <a href="{% url 'store:login' %}">
+                            <button class="btn btn-outline-dark" type="submit">
+                                <i class="bi bi-box-arrow-in-right me-1"></i>
+                                Login    
+                            </button>
+                        </a>
+                        {% endif %}</div>
                 </div>
 
             </div>
