--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -57,8 +57,7 @@
             </div>
             <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
                 <label for="{{ form.date.id_for_label }}" class="form-label">Date</label>
-                {{ form.date }}
-                {{ form.media }}
+                {{ form.date }}{{ form.media }}
             </div ><br /><br />
             <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
             <div>
