add search, arrivage

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -70,9 +70,9 @@
                                 Login    
                             </button>
                         </a>
-                        {% endif %}</div>
+                        {% endif %}
+                    </div>
                 </div>
-
             </div>
         </nav>
         {% block content %}{% endblock %}
