--- a/store/static/store/css/styles.css
+++ b/store/static/store/css/styles.css
@@ -571,6 +571,12 @@ progress {
   height: auto;
 }
 
+.img-height-fix {
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
