--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -32,24 +32,46 @@
         <!-- Product actions-->
     </div>
     <div class="card h-100 text-start">
-        <label class="fw-bolder">Référence: {{ ouvrage_reference }}</label>
-        <label class="fw-bolder">Auteur(s): {{ auteurs_name }}</label>
-        <label class="fw-bolder">Editeur: {{ editeurs_name }}</label>
-        <label class="fw-bolder">Catégorie: {{ categories_name }}</label>
-        <label class="fw-bolder">Publication: {{ ouvrage_publication }}</label>
-        <label class="fw-bolder">Stock: {{ ouvrage_stock }}</label>
+        <label class="fw-bolder">Référence: {{ ouvrage_reference }}</label><br />
+        <label class="fw-bolder">Auteur(s): {{ auteurs_name }}</label><br />
+        <label class="fw-bolder">Editeur: {{ editeurs_name }}</label><br />
+        <label class="fw-bolder">Catégorie: {{ categories_name }}</label><br />
+        <label class="fw-bolder">Publication: {{ ouvrage_publication }}</label><br />
+        <label class="fw-bolder">Stock: {{ ouvrage_stock }}</label><br />
     </div>
-    <div class="card h-100 text-start"></div>
+    <div class="card h-100 text-start">
+        <div class="form-label">Magasin</div>
         <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
             {% csrf_token %}
             <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
             <div class="form-control {% if form.catPrice.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.name.id_for_label }}" class="form-label">Cat. Prix</label>
-                {{ form.catPrice }}
+                <label for="{{ form.catPrice.id_for_label }}" class="form-label">Cat. Prix
+                {{ form.catPrice }}</label>
             </div>
             <div class="form-control {% if form.payment.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.email.id_for_label }}" class="form-label">Paiement</label>
+                <label for="{{ form.payment.id_for_label }}" class="form-label">Paiement</label>
                 {{ form.payment }}
+            </div>
+            <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
+                <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
+                {{ form.quantity }}
+            </div>
+            <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
+                <label for="{{ form.date.id_for_label }}" class="form-label">Date {{ form.date }}{{ form.media }}</label>
+            </div ><br /><br />
+            <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
+            <div>
+                <button type="submit" class="btn btn-success">Valider</button>
+            </div>
+        </form>
+    </div>
+    <div class="card h-100 text-start">
+        <div class="form-label">Arrivage</div>
+        <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
+            <div class="form-control">
+                <label for="{{ form.catPrice.id_for_label }}" class="form-label">Fournisseur</label>
             </div>
             <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
                 <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
