--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -35,7 +35,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'store:index' %}">Magasin</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'store:store' %}">Magasin</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'store:propos' %}">A Propos</a></li>
+                        {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="#!">Arrivage</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin</a>
@@ -46,8 +48,10 @@
                                 <li><a class="dropdown-item" href="{% url 'store:dataBase' %}">Base</a></li>
                             </ul>
                         </li>
+                        {% endif %}
                     </ul>
                     <div class="d-flex">
+                        {% if user.is_authenticated %}
                         <form>
                             {% csrf_token %}
                             <button class="btn btn-outline-dark" type="submit">
@@ -56,7 +60,6 @@
                                 <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                             </button>
                         </form>
-                        {% if user.is_authenticated %}
                         <a  href="{% url 'store:logout' %}">
                             <button class="btn btn-outline-dark" type="submit">
                                 Hi {{ user.username }}!
@@ -64,6 +67,14 @@
                             </button>
                         </a>
                         {% else %}
+                        <form>
+                            {% csrf_token %}
+                            <button class="btn btn-outline-dark" type="submit">
+                                <i class="bi-cart-fill me-1"></i>
+                                Panier
+                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            </button>
+                        </form>
                         <a href="{% url 'store:login' %}">
                             <button class="btn btn-outline-dark" type="submit">
                                 <i class="bi bi-box-arrow-in-right me-1"></i>
