--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -39,64 +39,91 @@
         <label class="fw-bolder">Publication: {{ ouvrage_publication }}</label><br />
         <label class="fw-bolder">Stock: {{ ouvrage_stock }}</label><br />
     </div>
-    <div class="card h-100 text-start">
-        <div class="form-label">Magasin</div>
-        <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
-            <div class="form-control {% if form.catPrice.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.catPrice.id_for_label }}" class="form-label">Cat. Prix
-                {{ form.catPrice }}</label>
-            </div>
-            <div class="form-control {% if form.payment.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.payment.id_for_label }}" class="form-label">Paiement</label>
-                {{ form.payment }}
-            </div>
-            <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
-                {{ form.quantity }}
-            </div>
-            <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.date.id_for_label }}" class="form-label">Date {{ form.date }}{{ form.media }}</label>
-            </div ><br /><br />
-            <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
-            <div>
-                <button type="submit" class="btn btn-success">Valider</button>
-            </div>
-        </form>
-    </div>
-    <div class="card h-100 text-start">
-        <div class="form-label">Arrivage</div>
-        <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
-            <div class="form-control">
-                <label for="{{ form.catPrice.id_for_label }}" class="form-label">Fournisseur</label>
-            </div>
-            <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
-                {{ form.quantity }}
-            </div>
-            <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
-                <label for="{{ form.date.id_for_label }}" class="form-label">Date</label>
-                {{ form.date }}{{ form.media }}
-            </div ><br /><br />
-            <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
-            <div>
-                <button type="submit" class="btn btn-success">Valider</button>
-            </div>
-        </form>
-    </div>
+    {% if user.is_authenticated %}
+        <div class="card h-100 text-start">
+            <div class="form-label">Magasin</div>
+            <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
+                <div class="form-control {% if form.catPrice.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.catPrice.id_for_label }}" class="form-label">Cat. Prix
+                    {{ form.catPrice }}</label>
+                </div>
+                <div class="form-control {% if form.payment.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.payment.id_for_label }}" class="form-label">Paiement</label>
+                    {{ form.payment }}
+                </div>
+                <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
+                    {{ form.quantity }}
+                </div>
+                <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.date.id_for_label }}" class="form-label">Date {{ form.date }}{{ form.media }}</label>
+                </div ><br /><br />
+                <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
+                <div>
+                    <button type="submit" class="btn btn-success">Valider</button>
+                </div>
+            </form>
+        </div>
+        <div class="card h-100 text-start">
+            <div class="form-label">Arrivage</div>
+            <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
+                <div class="form-control">
+                    <label for="{{ form.catPrice.id_for_label }}" class="form-label">Fournisseur</label>
+                </div>
+                <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
+                    {{ form.quantity }}
+                </div>
+                <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.date.id_for_label }}" class="form-label">Date</label>
+                    {{ form.date }}{{ form.media }}
+                </div ><br /><br />
+                <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
+                <div>
+                    <button type="submit" class="btn btn-success">Valider</button>
+                </div>
+            </form>
+        </div>
+    {% else %}
+        <div class="card h-100 text-start">
+            <div class="form-label">Note de la SELIO</div>
+                <label class="fw-bolder">{{ ouvrage_note }}</label><br />
+        </div>
+        <div class="card h-100 text-start">
+            <div class="form-label">Commande</div>
+            <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
+                <div class="form-control">
+                    <label for="{{ form.catPrice.id_for_label }}" class="form-label">Nom</label>
+                </div>
+                <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.quantity.id_for_label }}" class="form-label">Prénom</label>
+                </div>
+                <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
+                    <label for="{{ form.date.id_for_label }}" class="form-label">Adresse</label>
+                </div ><br /><br />
+                <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
+                <div>
+                    <button type="submit" class="btn btn-success">Ajouter au Panier</button>
+                </div>
+            </form>
+        </div>
+    {% endif %}
 </div>
-  {% if errors %}
-    <div>
-      {% for key, error in errors %}
-      {% autoescape off %}
-        {{ error }}
-      {% endautoescape %}
-      {% endfor %}
-    </div>
-  {% endif %}
+{% if errors %}
+  <div>
+    {% for key, error in errors %}
+    {% autoescape off %}
+      {{ error }}
+    {% endautoescape %}
+    {% endfor %}
+  </div>
+{% endif %}
 
 
 </div>
