--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -1,6 +1,6 @@
 {% load static %}
-<div class="container px-4 px-lg-5">
-    <form class="d-flex" action="{% url 'store:index' %}" method="POST">
+<br /><div class="container px-4 px-lg-5">
+    <form class="d-flex" action="{% url 'store:store' %}" method="POST">
         {% csrf_token %}
         <input class="search" type="search" name="search" placeholder="Recherche dans les titres">
         <button class="btn btn btn-outline-info my-2 my-sm-0" type="submit"> 
@@ -42,17 +42,38 @@
                             </div>
                         </div>
                     </div>
-                {% endfor %}
+                {% endfor %}<br />
                 {% if paginate %}
-                <div>
+                <div class="container px-4 px-lg-5 mt-5">
                     <div class="clearfix"></div>
                     <nav aria-label="...">
                         <ul class="pagination">
                         {% if ouvrages.has_previous %}
-                            <li><a href="?page={{ ouvrages.previous_page_number }}">Précédent</a></li>
+                            <li class="page-item">
+                                <a class="btn btn-outline-dark mt-auto page-link" href="?page=1"><i class="bi bi-chevron-bar-left me-1"></i></a>
+                            </li>
+                            {% if ouvrages.previous_page_number|add:'-1' >= 1 %}
+                                <li class="page-item">
+                                    <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.previous_page_number|add:'-1' }}">{{ ouvrages.number|add:"-2" }}</a>
+                                </li>
+                            {% endif %}
+                            <li class="page-item">
+                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.previous_page_number }}">{{ ouvrages.number|add:"-1" }}</a>
+                            </li>
                         {% endif %}
+                            <li class="page-item active"><a class="btn btn-outline-dark mt-auto page-link" href="">{{ ouvrages.number }}</a></li>
                         {% if ouvrages.has_next %}
-                            <li><a href="?page={{ ouvrages.next_page_number }}">Suivant</a></li>
+                            <li class="page-item">
+                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.next_page_number }}">{{ ouvrages.number|add:"1" }}</a>
+                            </li>
+                            {% if ouvrages.next_page_number|add:'1' <= ouvrages.paginator.num_pages %}
+                                <li class="page-item">
+                                    <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.next_page_number|add:'1' }}">{{ ouvrages.number|add:"2" }}</a>
+                                </li>
+                            {% endif %}
+                            <li class="page-item">
+                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.paginator.num_pages }}"><i class="bi bi-chevron-bar-right me-1"></i></a>
+                            </li>
                         {% endif %}
                         </ul>
                     </nav>
