--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,5 +1,6 @@
 {% extends 'store/base.html' %}
+{% load static %}
 
 {% block content %}
-    Accueil
+    <img class="card-img-top" src="{% static 'store/img/accueil1.jpg' %}" alt="..." />
 {% endblock %}
