--- a/store/templates/store/propos.html
+++ b/store/templates/store/propos.html
@@ -1,5 +1,16 @@
 {% extends 'store/base.html' %}
+{% load static %}
 
 {% block content %}
-    A Propos
+<div class="container px-4 px-lg-1 mt-5 justify-content-start">
+<div class="card h-100">
+    <img  class="align-self-center" width="30%" height="auto" src="{% static 'store/img/selio.png' %}" alt="..." />
+    <label>La SELIO, Société d’édition et librairie d’ Informations ouvrières porte le nom du journal Informations ouvrières, tribune libre de la lutte des classes.
+        La SELIO est avant tout une librairie. Elle a été constituée, comme le montre son catalogue pour assurer d’abord un fonds de base à toute personne intéressée par le mouvement ouvrier international, son histoire et son développement, comportant les grands textes classiques du marxisme mais aussi des titres du domaine historique, voire scientifique, des documents très divers, sans oublier une petite sélection de romans dont le thème est lié au mouvement ouvrier, ainsi que des biographies ou autobiographies dans le même domaine, au sens large.
+        La SELIO édite également quelques textes parfois difficiles à trouver aujourd’hui, toujours dans le même domaine politique.
+        Son public et son champ éditorial particulier légitiment pour les responsables de la SELIO de pratiquer une réduction générale de 5 % sur le prix public des ouvrages.
+        Le lien avec le journal Informations ouvrières s’exprime en général par la parution de notes de lecture à propos des nouveaux titres ( pas seulement ) en vente. Un catalogue papier (deux parutions par an) est disponible.
+        Bienvenue à la librairie SELIO.</label><br />
+</div>
+</div>
 {% endblock %}
