--- a/store/templates/store/history.html
+++ b/store/templates/store/history.html
@@ -6,13 +6,9 @@
     <div class="container px-4 px-lg-5">
         <form class="d-flex" action="{% url 'store:history' %}" method="POST">
         {% csrf_token %}
-            <label for="{{ form.date.id_for_label }}" class="form-label">Date Début</label>
-                {{ form.start_date }}
-                {{ form.media }}
-            <label for="{{ form.date.id_for_label }}" class="form-label">Date Début</label>
-                {{ form.end_date }}
-                {{ form.media }}
-            <input class="btn btn-primary btn-block" type="submit" value="Sélectionner" />
+            {{ form.start_date }}{{ form.media }}
+            {{ form.end_date }}{{ form.media }}
+            <input class="btn btn-primary" type="submit" value="Sélectionner" />
         </form>
     </div>
     <table class="table"><tbody>
