--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -1,5 +1,6 @@
 {% load static %}
-<br /><div class="container px-4 px-lg-5">
+<br />
+<div class="container px-4 px-lg-5">
     <form class="d-flex" action="{% url 'store:store' %}" method="POST">
         {% csrf_token %}
         <input class="search" type="search" name="search" placeholder="Recherche dans les titres">
@@ -16,6 +17,9 @@
 
 {% else %}
     <section class="py-5">
+    {% if paginate %}
+        {% include 'store/paginate.html' %}
+    {% endif %}
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 {% for ouvrage in ouvrages %}
@@ -42,44 +46,12 @@
                             </div>
                         </div>
                     </div>
-                {% endfor %}<br />
-                {% if paginate %}
-                <div class="container px-4 px-lg-5 mt-5">
-                    <div class="clearfix"></div>
-                    <nav aria-label="...">
-                        <ul class="pagination">
-                        {% if ouvrages.has_previous %}
-                            <li class="page-item">
-                                <a class="btn btn-outline-dark mt-auto page-link" href="?page=1"><i class="bi bi-chevron-bar-left me-1"></i></a>
-                            </li>
-                            {% if ouvrages.previous_page_number|add:'-1' >= 1 %}
-                                <li class="page-item">
-                                    <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.previous_page_number|add:'-1' }}">{{ ouvrages.number|add:"-2" }}</a>
-                                </li>
-                            {% endif %}
-                            <li class="page-item">
-                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.previous_page_number }}">{{ ouvrages.number|add:"-1" }}</a>
-                            </li>
-                        {% endif %}
-                            <li class="page-item active"><a class="btn btn-outline-dark mt-auto page-link" href="">{{ ouvrages.number }}</a></li>
-                        {% if ouvrages.has_next %}
-                            <li class="page-item">
-                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.next_page_number }}">{{ ouvrages.number|add:"1" }}</a>
-                            </li>
-                            {% if ouvrages.next_page_number|add:'1' <= ouvrages.paginator.num_pages %}
-                                <li class="page-item">
-                                    <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.next_page_number|add:'1' }}">{{ ouvrages.number|add:"2" }}</a>
-                                </li>
-                            {% endif %}
-                            <li class="page-item">
-                                <a class="btn btn-outline-dark mt-auto page-link" href="?page={{ ouvrages.paginator.num_pages }}"><i class="bi bi-chevron-bar-right me-1"></i></a>
-                            </li>
-                        {% endif %}
-                        </ul>
-                    </nav>
-                </div>
-                {% endif %}
+                {% endfor %}
+
             </div>
         </div>
+    {% if paginate %}
+        {% include 'store/paginate.html' %}
+    {% endif %}
     </section>
 {% endif %}
