--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -49,7 +49,7 @@
                     {{ Vform.catPrice }}
                 </div>
                 <div class="form-control {% if Vform.payment.errors %}has-warning has-feedback{% endif %}">
-                    <label for="{{ Vform.payment.id_for_label }}" >Paiement:</label>
+                    <label width="200px" for="{{ Vform.payment.id_for_label }}" >Paiement:</label>
                     {{ Vform.payment }}
                 </div>
                 <div class="form-control {% if Vform.quantity.errors %}has-warning has-feedback{% endif %}">
