--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -4,7 +4,7 @@
     <form class="d-flex" action="{% url 'store:store' %}" method="POST">
         {% csrf_token %}
         <input class="search" type="search" name="search" placeholder="Recherche dans les titres">
-        <button class="btn btn btn-outline-info my-2 my-sm-0" type="submit"> 
+        <button class="btn btn-outline-dark mt-auto" type="submit"> 
             <i class="bi bi-search me-1"></i>
         </button>
     </form>
