--- a/store/templates/store/list.html
+++ b/store/templates/store/list.html
@@ -1,9 +1,9 @@
 {% load static %}
 <br />
-<div class="container px-4 px-lg-5">
+<div class="container px-4 px-lg-5 row-cols-2">
     <form class="d-flex" action="{% url 'store:store' %}" method="POST">
         {% csrf_token %}
-        <input class="search" type="search" name="search" placeholder="Recherche dans les titres">
+        <input class="search col" type="search" name="search" placeholder="Recherche dans les titres">
         <button class="btn btn-outline-dark mt-auto" type="submit"> 
             <i class="bi bi-search me-1"></i>
         </button>
