--- a/store/templates/store/paginate.html
+++ b/store/templates/store/paginate.html
@@ -1,5 +1,5 @@
 <div class="container px-4 px-lg-5 mt-5 justify-content-center">
-    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4">
+    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-2">
         <div class="clearfix"></div>
         <nav aria-label="...">
             <ul class="pagination">
