--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -50,35 +50,34 @@
                     </ul>
                     <div class="d-flex">
                         {% if user.is_authenticated %}
-                        <form>
-                            {% csrf_token %}
-                            <button class="btn btn-outline-dark" type="submit">
-                                <i class="bi-cart-fill me-1"></i>
-                                Commandes
-                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                            </button>
-                        </form>
-                        <a  href="{% url 'store:logout' %}">
-                            <button class="btn btn-outline-dark" type="submit">
-                                Hi {{ user.username }}!
-                                <i class="bi bi-box-arrow-right me-1"></i>
-                            </button>
-                        </a>
+                            <form>
+                                {% csrf_token %}
+                                <button class="btn btn-outline-dark" type="submit">
+                                    <i class="bi-cart-fill me-1"></i>
+                                    Commandes
+                                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                                </button>
+                            </form>
+                            <a  href="{% url 'store:logout' %}">
+                                <button class="btn btn-outline-dark" type="submit">
+                                    Hi {{ user.username }}!
+                                    <i class="bi bi-box-arrow-right me-1"></i>
+                                </button>
+                            </a>
                         {% else %}
-                        <form>
-                            {% csrf_token %}
-                            <button class="btn btn-outline-dark" type="submit">
-                                <i class="bi-cart-fill me-1"></i>
-                                Panier
-                                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                            </button>
-                        </form>
-                        <a href="{% url 'store:login' %}">
-                            <button class="btn btn-outline-dark" type="submit">
-                                <i class="bi bi-box-arrow-in-right me-1"></i>
-                                Login    
-                            </button>
-                        </a>
+                            <a href="{% url 'store:basket' %}">
+                                <button class="btn btn-outline-dark" type="submit">
+                                    <i class="bi-cart-fill me-1"></i>
+                                    Panier
+                                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{ basket|length }}</span>
+                                </button>
+                            </a>
+                            <a href="{% url 'store:login' %}">
+                                <button class="btn btn-outline-dark" type="submit">
+                                    <i class="bi bi-box-arrow-in-right me-1"></i>
+                                    Login    
+                                </button>
+                            </a>
                         {% endif %}
                     </div>
                 </div>
