--- a/store/templates/store/detail.html
+++ b/store/templates/store/detail.html
@@ -97,21 +97,14 @@
         </div>
         <div class="card h-100 text-start">
             <div class="form-label">Commande</div>
-            <form class="form-label" action="{% url 'store:detail' ouvrage_id=ouvrage_id %}" method="post">
+            <form class="form-label" action="{% url 'store:add_to_basket' %}" method="post">
                 {% csrf_token %}
                 <input type="hidden" name="ouvrage_id" value="{{ ouvrage_id }}" >
-                <div class="form-control">
-                    <label for="{{ form.catPrice.id_for_label }}" class="form-label">Nom</label>
-                </div>
                 <div class="form-control {% if form.quantity.errors %}has-warning has-feedback{% endif %}">
-                    <label for="{{ form.quantity.id_for_label }}" class="form-label">Prénom</label>
-                </div>
-                <div class="form-control {% if form.date.errors %}has-warning has-feedback{% endif %}">
-                    <label for="{{ form.date.id_for_label }}" class="form-label">Adresse</label>
-                </div ><br /><br />
-                <!-- <input type="hidden" class="hidden" value="{{ album_id }}" name="album_id"> -->
+                    <label for="{{ form.quantity.id_for_label }}" class="form-label">Quantité</label>
+                </div><br /><br />
                 <div>
-                    <button type="submit" class="btn btn-success">Ajouter au Panier</button>
+                    <button type="submit" class="btn btn-success" >Ajouter au Panier</button>
                 </div>
             </form>
         </div>
