--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -1,6 +1,8 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
+<div class="col mb-4">
+    <div class="card text-center">
     {% if message %}
         {{ message }}
     {% endif %}
@@ -18,4 +20,6 @@
         {{ form.as_p }}
         <button type="submit">Log In</button>
     </form>
+    </div>
+</div>
 {% endblock %}
