--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -50,14 +50,13 @@
                     </ul>
                     <div class="d-flex">
                         {% if user.is_authenticated %}
-                            <form>
-                                {% csrf_token %}
+                            <a  href="{% url 'store:booking' %}">
                                 <button class="btn btn-outline-dark" type="submit">
                                     <i class="bi-cart-fill me-1"></i>
                                     Commandes
-                                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{ bookings_list|length }}</span>
                                 </button>
-                            </form>
+                            </a>
                             <a  href="{% url 'store:logout' %}">
                                 <button class="btn btn-outline-dark" type="submit">
                                     Hi {{ user.username }}!
