--- a/store/templates/store/basket.html
+++ b/store/templates/store/basket.html
@@ -49,7 +49,7 @@
         </table>
         {% else %}
             <div class="alert alert-warning" role="alert"><a href="{% url 'store:store' %}" class="btn btn-default btn-lg pull-right">Remplir mon panier !</a>
-                <i class="fa fa-shopping-cart fa-3x pull-left"></i> <h4>Votre panier est vide :'(</h4>
+                <i class="bi bi-cart fa-3x pull-left"></i> <h4>Votre panier est vide :'(</h4>
                 <p>Commencez dès maintenant à rechercher votre article préféré dans notre vaste catalogue de produits !</p>
             </div>
         {% endif %}<br /><br />
