--- a/store/templates/store/thanks.html
+++ b/store/templates/store/thanks.html
@@ -2,16 +2,15 @@
 {% load static %}
 
 {% block content %}
-    {% if booking %}
+    {% if booking_detail %}
     <div class="container px-4 px-lg-5">
         <div class="card">
             <img  class="align-self-center" width="30%" height="auto" src="{% static 'store/img/selio.png' %}" alt="..." />
             <label>La SELIO vous remercie</label><br />
             <p>Nous avons pris en compte votre commande, nous vous recontacterons afin confirmez l'adresse d'envoi et vous donner les instructions de paiment.</p>
             <p>Récapitulatif de votre commande:</p>
-            {{ booking.all }}
-            {% for ouvrage in booking.all %}
-                {{ ouvrage.title }}
+            {% for booking in booking_detail.all %}
+                <p>{{ booking.ouvrage.title }}</p>
             {% endfor %}
         </div>
     </div>
