--- a/store/templates/store/booking.html
+++ b/store/templates/store/booking.html
@@ -32,16 +32,19 @@
                 {% endfor %}
             </td>
             <td>
-                <form class="form-label" action="{% url 'store:booking' %}" method="post">
+                <form class="navbar navbar-expand-lg" action="{% url 'store:booking' %}" method="post">
                     {% csrf_token %}
                     <input type="hidden" name="booking_id" value="{{ booking.id }}" >
                     {% if booking.contacted %}
-                        <i class="form-control {% if Bform.contacted.errors %}has-warning has-feedback{% endif %} bi bi-check2-square"></i>
+                        <i class="{% if Bform.contacted.errors %}has-warning has-feedback{% endif %} bi bi-check2-square"></i>
                         {{ Bform.contacted }}
                     {% else %}
-                        <i class="bi bi-square"></i>
-                        {{ Bform.as_p }}
-                        <button type="submit" class="btn">Valider l'envoi</button>
+                        <i class="{% if Bform.contacted.errors %}has-warning has-feedback{% endif %} bi bi-square"></i>
+                        {{ Bform }}
+                        {{ Bform.contacted }}
+                        <button type="submit" class="btn btn-outline-dark">Contacté</button>
+                        <button type="submit" class="btn btn-outline-dark">Valider l'envoi</button>
+                        <button type="submit" class="btn btn-outline-dark">Annuler la Commande</button>
                     {% endif %}
                 </form>
             </td>
