--- a/store/templates/store/booking.html
+++ b/store/templates/store/booking.html
@@ -68,6 +68,11 @@
                     {% else %}
                         <button type="submit" name="action" value="C" class="btn btn-warning">Annulée</button>
                     {% endif %}
+                    {% if 'D' in booking.status %}
+                        <button type="submit" name="action" value="D" class="btn btn-danger">Supprimée</button>
+                    {% else %}
+                        <button type="submit" name="action" value="D" class="btn btn-danger" onclick="return confirm('Etes-vous sûr ?');">Supprimée</button>
+                    {% endif %}
                 </form>
             </td>
         </tr>
